--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
   <div id="input-area">
     <input id="msg" placeholder="快来跟小新说点骚话～" />
     <button onclick="send()">发送</button>
-    <div id="input-tip">✨ 小新随时准备开始胡说八道 ✨</div>
+    <div id="input-tip">✨ 小新随时准备开始胡说八道咯 ✨</div>
   </div>
 
   <script>
