--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           "Content-Type": "application/json"
         },
         body: JSON.stringify({
-          model: "glm-z1-airx",
+          model: "glm-4-flash-250414",
           messages: history
         })
       });
